# ai-research

./: .env.example  .gitignore
backend/: pyproject.toml
backend/app/: __init__.py  runlog.py  scheduling.py  security.py
backend/app/advisor/: __init__.py  auth.py  citations.py  providers.py  redaction.py  schemas.py  templates.py  wrapper.py
backend/app/channels/: __init__.py  adapter.py  telegram.py
backend/app/cli/: __init__.py  ask.py  coderworker.py  confirm.py  db.py  jobworker.py  login.py  pair.py  schedworker.py  setup.py  telegram.py  verify.py  web.py
backend/app/coder/: __init__.py  agent.py  sandbox.py
backend/app/config/: __init__.py  policies.py  settings.py
backend/app/gateway/: __init__.py  allowlist.py  ingress.py  pairing.py
backend/app/memory/: __init__.py  archive.py  hybrid.py  library.py  reinforce.py  reports.py  search.py  sweep.py  vectors.py  weight.py
backend/app/roles/: __init__.py  analyzer.py  boss.py  coder.py  company_expert.py  control.py  conversation.py  envelope.py  execution.py  improvement.py  jobcontrol.py  junior.py  librarian.py  lifecycle.py  plan_expert.py  pm.py  scheduler.py  senior.py
backend/app/setup/: __init__.py  config_writer.py  prompts.py  steps.py
backend/app/skills/: __init__.py  browser.py  codegen.py  context.py  data.py  library.py  memory.py  policy.py  registry.py  runtime.py  toolpolicy.py  web.py
backend/app/storage/: __init__.py  db.py
backend/app/storage/migrations/: 0001_identity.sql  0002_requests.sql  0003_plans.sql  0004_roles_audit.sql  0005_memory.sql  0006_schedules.sql  0007_memory_fts.sql  0008_pairing_codes.sql  0009_pairing_requests.sql  0010_job_queue.sql  0011_api_usage.sql  0012_plan_criteria.sql  0013_coder_queue.sql  0014_library_last_used.sql  __init__.py
backend/app/storage/repos/: __init__.py  ai_calls.py  api_usage.py  audit.py  coder_queue.py  identities.py  job_queue.py  library.py  memories.py  pairing_codes.py  pairing_requests.py  plans.py  requests.py  role_messages.py  schedules.py  steps.py
backend/app/web/: __init__.py  app.py  services.py
backend/tests/: conftest.py  fakes.py  test_allowlist.py  test_analyzer.py  test_api_usage.py  test_archive.py  test_ask_e2e.py  test_ask_recovery.py  test_auth.py  test_boss.py  test_channels_telegram.py  test_citations.py  test_coder.py  test_coder_agent.py  test_coder_sandbox.py  test_coderworker.py  test_company_expert.py  test_conversation.py  test_copilot_provider.py  test_db.py  test_db_cli.py  test_envelope.py  test_execution.py  test_fakes.py  test_generated_activate.py  test_generated_inert.py  test_improvement.py  test_ingress.py  test_jobcontrol.py  test_jobworker.py  test_junior.py  test_junior_research.py  test_librarian.py  test_library.py  test_library_compaction.py  test_lifecycle.py  test_live_integration.py  test_login.py  test_memories_repo.py  test_memory_fts.py  (+52 more)
config/: models.yaml  policies.yaml
config/templates/: analyzer.analyze.md  (+18 more)
docs/: db-schema.md  design-spec.md  development.md  implementation-plan.md  setup.md  usage.md
scripts/: _gen_lock.py  fetch-wheels.sh  lock-deps.sh  model_probe.py  setup-env.sh  setup.sh
