[project]
name = "ai-research-backend"
version = "0.0.1"
description = "Deterministic AI assistant platform - backend (AI as audited plugin, not the control path)."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
