[project]
name = "ai-research-backend"
version = "0.0.1"
description = "Deterministic AI assistant platform - backend (AI as audited plugin, not the control path)."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# Headless-browser skills (app/skills/browser.py). Optional: install with
#   pip install -e '.[browser]' && playwright install chromium
# so the offline, hash-pinned core never has to carry a browser binary.
browser = [
    "playwright>=1.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Deselect live integration tests by default so the standard `pytest` run stays
# fully offline. Run them explicitly with: `python -m pytest -m integration`.
addopts = "-q -m 'not integration'"
markers = [
    "integration: opt-in tests that call a REAL AI model over the network (need a configured token; excluded from the default run)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]  # allow test-only patterns (e.g. asserts in helpers)

[tool.ruff.lint.isort]
known-first-party = ["app"]
